2019-11-01  Nathan Sidwell  <nathan@acm.org>

	* g++.dg/template/fn.C: New.

2019-11-01  Kewen Lin  <linkw@gcc.gnu.org>

	PR testsuite/92127
	* gcc.dg/vect/costmodel/ppc/costmodel-pr37194.c: Disable unroll.
	* gcc.dg/vect/costmodel/ppc/costmodel-fast-math-vect-pr29925.c:
	Likewise.

2019-10-31  Alexandre Oliva <oliva@adacore.com>

	* gcc.misc-tests/help.exp: Test --help=common for full sentences.

2019-10-31  Jakub Jelinek  <jakub@redhat.com>

	PR preprocessor/92296
	* c-c++-common/cpp/pr92296-1.c: New test.
	* c-c++-common/cpp/pr92296-2.c: New test.

2019-10-31  Jozef Lawrynowicz  <jozef.l@mittosystems.com>

	* gcc.target/msp430/devices-main.c: Move to devices subdirectory.
	* gcc.target/msp430/devices/bad-devices-1.c: Update #include path to
	devices-main.c.
	* gcc.target/msp430/devices/bad-devices-2.c: Likewise.
	* gcc.target/msp430/devices/bad-devices-3.c: Likewise.
	* gcc.target/msp430/devices/bad-devices-4.c: Likewise.
	* gcc.target/msp430/devices/bad-devices-5.c: Likewise.
	* gcc.target/msp430/devices/bad-devices-6.c: Likewise.
	* gcc.target/msp430/devices/csv-device-order.c: Likewise.
	* gcc.target/msp430/devices/csv-msp430_00.c: Likewise.
	* gcc.target/msp430/devices/csv-msp430_01.c: Likewise.
	* gcc.target/msp430/devices/csv-msp430_02.c: Likewise.
	* gcc.target/msp430/devices/csv-msp430_04.c: Likewise.
	* gcc.target/msp430/devices/csv-msp430_08.c: Likewise.
	* gcc.target/msp430/devices/csv-msp430_10.c: Likewise.
	* gcc.target/msp430/devices/csv-msp430_11.c: Likewise.
	* gcc.target/msp430/devices/csv-msp430_12.c: Likewise.
	* gcc.target/msp430/devices/csv-msp430_14.c: Likewise.
	* gcc.target/msp430/devices/csv-msp430_18.c: Likewise.
	* gcc.target/msp430/devices/csv-msp430_20.c: Likewise.
	* gcc.target/msp430/devices/csv-msp430_21.c: Likewise.
	* gcc.target/msp430/devices/csv-msp430_22.c: Likewise.
	* gcc.target/msp430/devices/csv-msp430_24.c: Likewise.
	* gcc.target/msp430/devices/csv-msp430_28.c: Likewise.